--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -8,3 +8,9 @@ padding: 0;}
   align-items: center;
   text-align: center;
 }
+.d-around{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
